Better file extension

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -120,7 +120,7 @@
 %\chapter*{Abstract}\label{chapter:abstract}
 \begin{abstract}
 	\addcontentsline{toc}{chapter}{Abstract}
-	\input{Abstract.txt}
+	\input{Abstract.tex}
 \end{abstract}
 
 \cleardoublepage
