--- a/Essay/Essay.tex
+++ b/Essay/Essay.tex
@@ -1,21 +1,56 @@
-\documentclass[12pt,a4paper]{article}
-\author{Kevin A. Blondino}
-\title{Generating}
+\documentclass[12pt,a4paper]{letter}
+\name{Kevin A. Blondino}
+\signature{Kevin A. Blondino}
 \date{\today}
 
-\usepackage{fullpage, indentfirst, graphicx, amsmath, float}
+\address{
+	Flux, Groene Loper 19,\\
+	5612 AZ Eindhoven
+}
+
+\usepackage{fullpage, indentfirst, amsmath}
 \linespread{1.2}
 \usepackage[UKenglish]{isodate}
 \cleanlookdateon
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage{cleveref}
 
 % Temporary Packages
-\usepackage{lipsum}
+\usepackage{lipsum, color}
 
 \begin{document}
-\maketitle
-\lipsum
+\begin{letter}{
+	Bloomingdale Senior High School,\\
+	1700 E Bloomingdale Ave,\\
+	Valrico, FL 33596, USA
+}
+
+\opening{To the science students of Bloomingdale,}
+
+The term ``holy grail'' is usually used to indicate some physical object or abstract goal with great significance or utility.
+Sometimes, it also implies it is elusive or somehow beyond reach.
+One may argue that for the energy industry, nuclear fusion is considered its holy grail.
+{\color{red}FINISH INTRO!}
+
+%Any origin story of nuclear energy must begin with Einstein's famous discovery, and probably the single most famous equation of all time, of $E = m\,c^2$.
+%It conveys a powerful, but still simple, statement about the fundamental rules of the universe.
+%Its technical name gives the best description: the mass-energy equivalence.
+%Mass and energy are not separate things, but different manifestations of the same thing.
+%The factor of $c^2$ means that a small amount of mass $m$ can ``become'' a whole lot of energy.
+%The nucleus of heavy atoms are strangely less massive than the combined sum of the 
+The public's perception of nuclear energy is usually one of fear and misunderstanding.
+Simply the word ``nuclear'' conjures images of large explosions, deadly radiation, and a nuclear wasteland.
+However, current nuclear energy technology has proven to be safer than traditional energy sources; however it still retains serious problems.
+There are two ways to tap into the energy stored in the nucleus, with one manner being significantly easier.
+
+Currently, most promising device for the generation of energy from nuclear fusion is called a tokamak.
+
+My research involved investigating the edge of the plasma.
+
+\closing{Sincerely,}
+\signature
+\name
+
+\end{letter}
 \end{document}
 
