--- a/Essay/Essay.tex
+++ b/Essay/Essay.tex
@@ -25,7 +25,7 @@
 
 %{{{ Packages
 \usepackage{fullpage, indentfirst, amsmath, graphicx}
-\linespread{1.2}
+\linespread{1.1}
 \usepackage[UKenglish]{isodate}
 \cleanlookdateon
 \usepackage[T1]{fontenc}
@@ -34,6 +34,8 @@
 % Temporary Packages
 \usepackage{lipsum, color}
 %}}}
+
+\pagenumbering{gobble}
 
 \begin{document}
 \begin{letter}{
@@ -44,43 +46,89 @@
 
 \opening{To the science students of Bloomingdale,}
 
-The term ``holy grail'' is usually used to indicate some physical object or abstract goal with great significance or utility.
-Sometimes, it also implies it is elusive or somehow beyond reach.
-One may argue that for the energy industry, nuclear fusion is considered its holy grail.
+%The term ``holy grail'' is usually used to indicate some physical object or abstract goal with great significance or utility.
+%Sometimes, it use also implies the goal is elusive or somehow just beyond reach.
+%One may argue that for the energy industry, nuclear fusion is considered its holy grail.
 
 The public's perception of nuclear energy is usually one of fear and misunderstanding.
 Simply the word ``nuclear'' conjures images of large explosions, deadly radiation, and a nuclear fallout.
 However, current nuclear fission energy technology has proven to be safer than traditional energy sources; nevertheless, it still retains serious problems.
-These include the aforementioned fears, such as the possibility of reactor meltdowns, weaponization of nuclear fuel, etc. 
+These include the fears, as well as the possibility of reactor meltdowns, weaponization of nuclear fuel, and other environmental dangers. 
 
-Nuclear \emph{fusion}, on the other hand, primarily does not need to deal with these issues.
+Nuclear \emph{fusion}, on the other hand, does not need to deal with these issues, for the most part.
 By its very nature, it is significantly more difficult to achieve than fission, unfortunately.
-The largest and most-funded research in fusion is that of thermonuclear fusion through magnetic confinement.
-The most popular type of machine for the research and future reactor is called a tokamak, which essentially is a toroidal chamber that keeps the fuel (plasma of isotopes of hydrogen) confined with a large magnetic field.
+The largest and most-funded area of research in fusion is that of thermonuclear fusion through magnetic confinement.
+The most popular type of machine that is researched is called a tokamak, which essentially is a toroidal chamber that keeps the fuel (a plasma of isotopes of hydrogen heated to very high temperatures) confined by a large magnetic field.
 Imagine a jelly-filled donut that still has the traditional donut shape, \emph{i.e.} there's a hole in the middle.
-The jelly inside that donut is the fuel, that can unfortunately leak out further into the dough than we would like during the normal operation.
+The jelly inside that donut is the fuel, which can unfortunately leak out further into the dough than we would like during the normal operation.
 
-My research deals with a phenomenon that occurs right at the boundary of the confined plasma, or in the analogy, at the boundary of the jelly and the dough of this somewhat strange donut.
-The fusion community discovered in the early 1980s that if you heat the plasma beyond a certain point, the leaking of the fuel outwards seems to go down very suddenly.
-This was a momentous discover, as it allowed us to push the machines to higher temperatures and pressures, getting us closer to creating sustainable fusion energy.
-They coined this new operational state as H--mode, short for High operational mode, and named the previous state, unsurprisingly, L--mode.
+My research deals with a phenomenon that occurs right at the boundary of the confined plasma, or in the analogy, at the boundary of the jelly and the dough of this somewhat-strange donut.
+The fusion community discovered in the early 1980s that if you heat the plasma beyond a certain point, the leaking of the fuel and energy outwards seems to go down very suddenly and sharply.
+This was a momentous discovery, as it allowed us to push the machines to higher temperatures and pressures while keeping the confinement, getting us closer to creating sustainable fusion energy.
+They coined this new operational state as H--mode, short for high operational mode, and named the previous state, unsurprisingly, L--(Low) mode.
 We then discovered a bit later that this occurs due to the generation of a radial electric field at the edge.
-The details of how this electric field comes to be is something even to this day we are not completely sure about.
+This is because it induces certain flows of the plasma, which can suppress the turbulence, the main cause of the loss of confinement.
+It is like breaking up a small whirlpool of water by running your fingers through it.
+The details of how this electric field comes to be is something still being developed.
+We do not have a complete, comprehensive theory on it yet.
 
 The entirety of my research focused on this issue.
-One group of scientists were working on the mathematics, particularly simulating the dynamics of the transition between L-- and H--mode.
+One group of scientists previously worked on the mathematics, particularly in simulating the dynamics of the transition between L-- and H--mode.
 As it turns out, the mathematics of the transition between the two modes is not as simple as just finding how much is the right amount of input heating.
+It has more interesting properties, such hysteresis, which in this context means that the transition point for going from L-- to H--mode is different than for H-- to L--mode.
 Nevertheless, they had found the appropriate type of mathematical model that describes it.
-On the other end, ideas on the different mechanisms that cause the generation of this field had been developed and discussed.
+On the other end, ideas on the different mechanisms that cause the generation of this field had been derived, developed, and discussed.
 These mechanisms are called ``nonambipolar particle fluxes.''
 A particle flux is simply the number of particles that pass through an area per time.
-Nonambipolar in this context refers to the fact that these fluxes are not equal for both positive and negative charged particles.
-These fluxes cause the charge separation that is necessary for the electric field.
+``Nonambipolar'' in this context refers to the fact that these fluxes are not equal in magnitude for both positive and negative charged particles.
+These fluxes cause the charge separation that creates the electric field.
+
+A vital step in creating this comprehensive theory of the radial electric field is to be able to recreate the states of the operation modes while using calculated fluxes.
+Although the overall mathematical form had been proven, tying in the fluxes explicitly into the dynamical system for the purposes of finding the electric field dependence had not been done.
+The development of this comprehensive theory will allow us to understand how to manipulate and control the plasma at a higher caliber than currently.
+Knowing which of the mechanisms dominate the generation is one step in this endeavor.
+
+There are four processes I looked into:
+\begin{itemize}
+	\item Charge Exchange Friction: \\
+As neutral (un-ionized) atoms collide and interact with the plasma, the atom can donate its electron to the ion; this process is known as charge exchange.
+This interaction creates friction in the overall flow of the plasma.
+	\item Ion Orbit Loss: \\
+When a charged particle moves through a magnetic field, it will gyrate around the magnetic field line it is on, almost like a bead on a string that is spun up.
+The size of the gyration is directly proportional to the mass of the particle, and therefore the size of the ions' gyrations is significantly bigger than that of electrons.
+When ions are very close to the edge of the plasma, their gyration may dip them out of the main plasma, and causes them to be lost.
+	\item Bulk Viscosity: \\
+Arguably the most mathematically complex of these mechanisms that I investigated is called the ion bulk (volumetric) viscosity.
+Fusion plasmas are compressible fluids in a curved magnetic field; when the fluid expands without having any shear, it can experience internal friction, more on the ions than on electrons.
+	\item Electron Anomalous Diffusion: \\
+Turbulent waves of various types can occur in tokamak plasmas, with some able to carry momentum out of it.
+Again, since electrons are at least 2000 times less massive than the ions, these waves are able to affect the electrons at a much greater magnitude.
+\end{itemize}
+
+There are other mechanisms that can affect the electric field that I did not investigate, as they are either hypothesized or known to be smaller than the other fluxes.
+Once I had gotten the best mathematical form of these mechanisms, I put them into a set of equations that solves for the state of the system.
+
+I would consider the results of this study a bit of a mixed bag.
+On the one hand, which of the four fluxes had the largest effect on the system was able to be identified relatively easily.
+The bulk viscosity was found to dominate, with its exclusion leading to no H--mode in most cases.
+In general, the electron anomalous loss came in second place, with the ion orbit loss reduced by the field very drastically, as is expected.
+Also, varying the heating gave some of results that were predicted, such as the generation of H--mode, temporarily.
+
+On the other hand, some seemingly unphysical effects were introduced which currently have no known cause.
+The most notable of which was very, very rapid vibrations in the electric field, which then get transfered to the plasma.
+We know by comparing to previous research that these vibrations are much too fast to be associated with any known effects.
+In addition, if they were large enough, they could cause the system of equations to completely diverge, so no solution could be found.
+I would hypothesize that these effects are a symptom of the mathematical formulation of the fluxes, meaning they would need to be scrutinized again for rigor.
+
+As you can see, there is plenty of work to be done on this topic.
+If we are to have energy generated from commercially-viable nuclear fusion reactors, the phenomenon of H--mode will have to be fully understood and controllable.
+I hope that this letter gives some insight on some of the work that is being done in the field of fusion, and at least inspire you to take AP Physics, or even consider studying physics beyond high school.
 
 \vspace*{10mm}
 
 \closing{Sincerely,
-\includegraphics[scale=0.35]{./Signature_Cropped.pdf}}
+\includegraphics[scale=0.35]{./Signature_Cropped.pdf}
+}
 
 
 \end{letter}
